--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,35 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# Compiled output
+# API Keys
+secrets.json
+RangerTrak-secrets.json
+./src/index.html
+
+# personnel info
+/src/assets/imgs/REW
+/src/assets/data/ranger*.json
+
+# compiled output
 /dist
 /tmp
 /out-tsc
+# Only exists if Bazel was run
 /bazel-out
 
-# Node
+# dependencies
 /node_modules
-npm-debug.log
-yarn-error.log
+
+# Old code
+/archived
+
+#Test and non-project stuff
+/junk
+
+# profiling files
+chrome-profiler-events*.json
 
 # IDEs and editors
-.idea/
+/.idea
 .project
 .classpath
 .c9/
@@ -20,7 +37,7 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
-# Visual Studio Code
+# IDE - VSCode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -28,15 +45,27 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
-# Miscellaneous
+# misc
+/docs
+/src-extra
 /.angular/cache
-.sass-cache/
+/.sass-cache
 /connect.lock
 /coverage
 /libpeerconnection.log
+npm-debug.log
+yarn-error.log
 testem.log
 /typings
 
-# System files
+# System Files
 .DS_Store
 Thumbs.db
+
+# Firebase
+.firebase
+*-debug.log
+.runtimeconfig.json
+.env
+node_modules
+src/app/shared/policies.json
