--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@angular/common": "^14.2.8",
     "@angular/compiler": "^14.2.8",
     "@angular/core": "^14.2.8",
+    "@angular/flex-layout": "^14.0.0-beta.41",
     "@angular/forms": "^14.2.8",
     "@angular/platform-browser": "^14.2.8",
     "@angular/platform-browser-dynamic": "^14.2.8",
     "@angular/router": "^14.2.8",
+    "ag-grid-angular": "^28.2.1",
+    "ag-grid-community": "^28.2.1",
     "jasmine-core": "^4.5.0",
     "rxjs": "~7.5.7",
     "tslib": "^2.4.1",
