--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ag-grid-angular": "^28.2.1",
     "ag-grid-community": "^28.2.1",
     "jasmine-core": "^4.5.0",
+    "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.7",
     "tslib": "^2.4.1",
     "zone.js": "~0.11.8"
