--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^14.2.9",
     "ag-grid-angular": "^28.2.1",
     "ag-grid-community": "^28.2.1",
+    "core-js": "^3.26.0",
     "jasmine-core": "^4.5.0",
     "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.7",
