a bit of wordsmithing...

--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "open-fema-ng-client",
   "version": "0.0.0",
   "scripts": {
+    "xyz": "npm run script-name. Main scripts (start, stop, restart, install, version or test) do not require run command. https://docs.npmjs.com/cli/v8/using-npm/scripts",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "opt": "ng build  --optimization=true",
     "watch": "ng build --watch --configuration development",
     "u1": "",
     "u2": "",
     "u3": "",
     "u4": "",
     "u5": "",
-    "u6": "",
+    "go": "ng s -o",
     "test": "ng test"
   },
   "private": true,
