--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@angular/core": "^14.2.9",
     "@angular/flex-layout": "^14.0.0-beta.41",
     "@angular/forms": "^14.2.9",
+    "@angular/google-maps": "^14.2.7",
     "@angular/platform-browser": "^14.2.9",
     "@angular/platform-browser-dynamic": "^14.2.9",
     "@angular/router": "^14.2.9",
+    "@googlemaps/markerclusterer": "^2.0.13",
     "ag-grid-angular": "^28.2.1",
     "ag-grid-community": "^28.2.1",
     "jasmine-core": "^4.5.0",
