--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "build": "ng build",
     "opt": "ng build  --optimization=true",
     "watch": "ng build --watch --configuration development",
-    "u1": "npx ng update @angular/core @angular/cli --next",
-    "u2": "",
-    "u3": "",
-    "u4": "",
-    "u5": "",
+    "update1": "npx ng update @angular/core @angular/cli --next",
+    "update2": "npx ng update --next",
+    "update3": "npx npm-check-updates --next",
+    "update4": "npx npm-check-updates -u",
+    "update5": "npm install",
+    "update6": "npm i -g rimraf",
     "go": "ng s -o",
     "test": "ng test"
   },
