--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "ng build --watch --configuration development",
     "update1": "npx ng update @angular/core @angular/cli --next",
     "update2": "npx ng update --next",
-    "update3": "npx npm-check-updates --next",
+    "update3": "npx npm-check-updates",
     "update4": "npx npm-check-updates -u",
     "update5": "npm install",
     "update6": "npm i -g rimraf",
@@ -19,16 +19,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.9",
-    "@angular/common": "^14.2.9",
-    "@angular/compiler": "^14.2.9",
-    "@angular/core": "^14.2.9",
+    "@angular/animations": "^14.2.10",
+    "@angular/common": "^14.2.10",
+    "@angular/compiler": "^14.2.10",
+    "@angular/core": "^14.2.10",
     "@angular/flex-layout": "^14.0.0-beta.41",
-    "@angular/forms": "^14.2.9",
+    "@angular/forms": "^14.2.10",
     "@angular/google-maps": "^14.2.7",
-    "@angular/platform-browser": "^14.2.9",
-    "@angular/platform-browser-dynamic": "^14.2.9",
-    "@angular/router": "^14.2.9",
+    "@angular/platform-browser": "^14.2.10",
+    "@angular/platform-browser-dynamic": "^14.2.10",
+    "@angular/router": "^14.2.10",
     "@googlemaps/markerclusterer": "^2.0.13",
     "ag-grid-angular": "^28.2.1",
     "ag-grid-community": "^28.2.1",
@@ -36,12 +36,12 @@
     "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.7",
     "tslib": "^2.4.1",
-    "zone.js": "~0.11.8"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.8",
-    "@angular/cli": "~14.2.8",
-    "@angular/compiler-cli": "^14.2.9",
+    "@angular-devkit/build-angular": "^14.2.9",
+    "@angular/cli": "~14.2.9",
+    "@angular/compiler-cli": "^14.2.10",
     "@types/jasmine": "~4.3.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.1",
