--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.10",
-    "@angular/common": "^14.2.10",
-    "@angular/compiler": "^14.2.10",
-    "@angular/core": "^14.2.10",
+    "@angular/animations": "^15.0.0-rc.3",
+    "@angular/common": "^15.0.0-rc.3",
+    "@angular/compiler": "^15.0.0-rc.3",
+    "@angular/core": "^15.0.0-rc.3",
     "@angular/flex-layout": "^14.0.0-beta.41",
-    "@angular/forms": "^14.2.10",
+    "@angular/forms": "^15.0.0-rc.3",
     "@angular/google-maps": "^14.2.7",
-    "@angular/platform-browser": "^14.2.10",
-    "@angular/platform-browser-dynamic": "^14.2.10",
-    "@angular/router": "^14.2.10",
+    "@angular/platform-browser": "^15.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "^15.0.0-rc.3",
+    "@angular/router": "^15.0.0-rc.3",
     "@googlemaps/markerclusterer": "^2.0.13",
     "ag-grid-angular": "^28.2.1",
     "ag-grid-community": "^28.2.1",
@@ -39,9 +39,9 @@
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.9",
-    "@angular/cli": "~14.2.9",
-    "@angular/compiler-cli": "^14.2.10",
+    "@angular-devkit/build-angular": "^15.0.0-rc.3",
+    "@angular/cli": "~15.0.0-rc.3",
+    "@angular/compiler-cli": "^15.0.0-rc.3",
     "@types/jasmine": "~4.3.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.1",
