--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular/cli": "~14",
     "@angular/compiler-cli": "^14",
     "@types/jasmine": "~4.3.0",
+    "@types/supercluster": "^7.1.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
