--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "dom"
     ],
     "resolveJsonModule": true,
+    "esModuleInterop": true,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
